# graphene-TMDC

./: README.md
cxx/: CMakeCache.txt  CMakeLists.txt  Makefile  SlatorKoster.py  SlatorKosterPYTHON_wrap.cxx  cmake_install.cmake  test.py  testSimpson2d  testSlatorKoster  test_SlatorKoster
cxx/include/: SlatorKoster.h  feast.cpp  feast.py  simpson2d.cpp  simpson2d.h
cxx/src/: SlatorKoster.cpp  SlatorKoster.i  SlatorKosterExt.cpp  sparseMatrixCheck.cpp  sparseMatrixCheck.out  test.cpp  testSimpson2d.cpp
